--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <body>
     <div id="app">
     </div>
-    <script src="js/bundle.js"></script>
+    <script src="static/bundle.js"></script>
   </body>
 </html>
